--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,10 @@
 outDir: /tmp/callgraph/jhttp/
 
 # Set the log level. Valid levels are 0 - 6: OFF - TRACE
-logLevel: 0 
+logLevel: 3
 
 # Log debug output on stdout
-logConsole: false
+logConsole: true
 
 # Output format of Callgraph. Available options: COVERAGE_JSON | GRAPH_DB_CSV
 writeTo: COVERAGE_JSON
